# EcoloGRAPH

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Modelfile.gpt-oss  README.md  RESTART_EXAMPLES.sh  pyproject.toml  requirements.txt
config/: api-key.example
config/prompts/: extract_citations.txt  extraction_generic.txt  extraction_paper.txt  extraction_system.txt  extraction_user.txt  marine_ecology_system.txt  methodology_system.txt
data/: demo_output.json  model_comparison.json
data/chat_history/: .gitkeep
docs/: 01_project_documentation.md  02_development_log.md  03_recent_updates.md  03_tutorial.md  04_architecture_diagrams.md  05_module_summary.md  06_testing_guide.md  07_architecture_map.md  infographic_v1.4.1.md
scripts/: app.py  backfill_chunks.py  chat_demo.py  demo_pipeline.py  diagnose_agent.py  fix_fts5.py  fix_paper_metadata.py  ingest.py  ingestion_report.py  query_chunks.py  query_chunks_lite.py  rebuild_fts.py  repair_neo4j_titles.py  test_domain_classifier.py  test_enrichment.py  test_extraction.py  test_full_pipeline.py  test_ollama_models.py  test_parse_sample.py  verify_setup.py
src/: __init__.py
src/agent/: __init__.py  query_agent.py  tool_groups.py  tool_registry.py
src/core/: __init__.py  config.py  domain_registry.py  llm_client.py  lm_studio_manager.py  schemas.py  token_utils.py
src/enrichment/: __init__.py  crossref_client.py  metadata_enricher.py  semantic_scholar_client.py  (+1 more)
tests/: conftest.py  test_integration.py  test_paper_extraction.py  test_token_utils.py
(+46 files in other folders)
